# blog.netswig.dev

./: mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: about.md  index.md
docs/posts/: code-example.md  example-post.md  first.md
docs/posts/2024/: cisco-ios-working-with-text-files.md  cisco-nxos-wan-macsec-configuration.md
