[tool.poetry]
name = "blog-netswig-dev"
version = "0.1.0"
description = "A blog about all things, but mostly networking and automation."
authors = ["netswig"]
readme = "README.md"
packages = [{include = "blog"}]
package-mode = false
[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.44"
mkdocs-material-extensions = "^1.3.1"
neoteroi-mkdocs = "^1.1.0"
mkdocs-glightbox = "^0.4.0"
mkdocs-rss-plugin = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
